--- a/.github/workflows/publish-crates.yml
+++ b/.github/workflows/publish-crates.yml
@@ -30,8 +30,51 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-publish-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Check formatting
+        run: cargo fmt --all -- --check
+
+      - name: Run clippy
+        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
+
+      - name: Build workspace
+        run: cargo build --workspace --all-features --release
+
+      - name: Run all tests
+        run: cargo test --workspace --all-features
+
+      - name: Run integration tests
+        run: cargo test --workspace --all-features --test '*'
+
+      # Publish in dependency order
+      - name: Publish solverforge-core
+        run: cargo publish -p solverforge-core --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Wait for crates.io
+        run: sleep 30
+
+      - name: Publish solverforge-macros
+        run: cargo publish -p solverforge-macros --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Wait for crates.io
+        run: sleep 30
+
+      - name: Publish solverforge-scoring
+        run: cargo publish -p solverforge-scoring --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Wait for crates.io
+        run: sleep 30
+
+      - name: Publish solverforge-config
+        run: cargo publish -p solverforge-config --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Wait for crates.io
+        run: sleep 30
+
+      - name: Publish solverforge-solver
+        run: cargo publish -p solverforge-solver --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Wait for crates.io
+        run: sleep 30
+
+      - name: Publish solverforge-benchmark
+        run: cargo publish -p solverforge-benchmark --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Wait for crates.io
+        run: sleep 30
+
       - name: Publish solverforge
         run: cargo publish -p solverforge --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
-
-      - name: Wait for crates.io index update
-        run: sleep 30
