fix(publish): add version specs for workspace crate publishing
Added explicit version+path specifications to all internal crate dependencies
to enable publishing to crates.io. When publishing, cargo requires version
constraints even for workspace crates.

Changes:
- Workspace Cargo.toml: keep internal deps path-only (versions per-crate)
- Individual crate Cargo.tomls: specify version="0.4.0" + path for internal deps
- solverforge-macros: use path-only for dev-dependency to avoid circular dep
- Makefile publish-crates-dry: simplified to run tests only (cargo cannot
  dry-run validate unpublished workspace inter-dependencies)

This resolves the "dependency does not specify a version" error when attempting
to publish the workspace to crates.io.

--- a/crates/solverforge-scoring/Cargo.toml
+++ b/crates/solverforge-scoring/Cargo.toml
@@ -6,5 +6,5 @@ license.workspace = true
 description = "Incremental constraint scoring for SolverForge"
 
 [dependencies]
-solverforge-core.workspace = true
+solverforge-core = { version = "0.4.0", path = "../solverforge-core" }
 thiserror.workspace = true
