--- a/crates/solverforge-benchmark/Cargo.toml
+++ b/crates/solverforge-benchmark/Cargo.toml
@@ -8,8 +8,8 @@ rust-version.workspace = true
 description = "Benchmarking framework for SolverForge constraint solver"
 
 [dependencies]
-solverforge-core = { workspace = true }
-solverforge-solver = { workspace = true }
-solverforge-scoring = { workspace = true }
+solverforge-core = { version = "0.4.0", path = "../solverforge-core" }
+solverforge-solver = { version = "0.4.0", path = "../solverforge-solver" }
+solverforge-scoring = { version = "0.4.0", path = "../solverforge-scoring" }
 
 [dev-dependencies]
