--- a/crates/solverforge-macros/Cargo.toml
+++ b/crates/solverforge-macros/Cargo.toml
@@ -14,4 +14,4 @@ quote.workspace = true
 proc-macro2.workspace = true
 
 [dev-dependencies]
-solverforge.workspace = true
+solverforge = { path = "../solverforge" }
