refactor: enforce zero-erasure architecture across solver
- Make Score trait require Copy for zero-cost hot path operations
- Convert BendableScore to const generics with ArrayVec storage
- Add MoveArena with take(index) for zero-clone move ownership transfer
- Convert LocalSearchForager to index-based API (no move cloning)
- Convert ConstructionForager to index-based API
- Update VndPhase to use index-based arena pattern
- Remove CachingMoveSelector (fundamentally clone-based)
- Redesign CartesianProductMoveSelector as arena-based iterator
- Extract Move trait to traits.rs, remove Clone bound
- Add ExternalTermination for channel-based termination
- Update SolverManager to use tokio channels
- Add console module for tracing-based solver output

--- a/crates/solverforge-solver/Cargo.toml
+++ b/crates/solverforge-solver/Cargo.toml
@@ -16,3 +16,4 @@ rand_chacha.workspace = true
 rayon.workspace = true
 smallvec.workspace = true
 serde.workspace = true
+tokio = { version = "1.49", features = ["sync"] }
