--- a/crates/solverforge/Cargo.toml
+++ b/crates/solverforge/Cargo.toml
@@ -9,6 +9,7 @@ description = "SolverForge - A constraint solver in Rust"
 default = []
 decimal = ["solverforge-core/decimal"]
 serde = ["solverforge-core/serde"]
+console = ["dep:tracing", "dep:tracing-subscriber", "dep:owo-colors", "dep:num-format"]
 
 [dependencies]
 solverforge-core = { version = "0.4.0", path = "../solverforge-core" }
@@ -16,3 +17,9 @@ solverforge-macros = { version = "0.4.0", path = "../solverforge-macros" }
 solverforge-scoring = { version = "0.4.0", path = "../solverforge-scoring" }
 solverforge-solver = { version = "0.4.0", path = "../solverforge-solver" }
 solverforge-config = { version = "0.4.0", path = "../solverforge-config" }
+
+# Console output (optional)
+tracing = { version = "0.1", optional = true }
+tracing-subscriber = { version = "0.3", optional = true }
+owo-colors = { version = "4", optional = true }
+num-format = { version = "0.4", optional = true }
