--- a/crates/solverforge/Cargo.toml
+++ b/crates/solverforge/Cargo.toml
@@ -20,6 +20,6 @@ solverforge-config = { version = "0.4.0", path = "../solverforge-config" }
 
 # Console output (optional)
 tracing = { version = "0.1", optional = true }
-tracing-subscriber = { version = "0.3", optional = true }
+tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
 owo-colors = { version = "4", optional = true }
 num-format = { version = "0.4", optional = true }
