feat(solverforge): add verbose-logging feature for debug output
Controls default filter level in console init (INFO vs DEBUG).

--- a/crates/solverforge-solver/Cargo.toml
+++ b/crates/solverforge-solver/Cargo.toml
@@ -5,6 +5,9 @@ edition.workspace = true
 license.workspace = true
 description = "Solver engine for SolverForge"
 
+[features]
+default = []
+
 [dependencies]
 solverforge-core = { version = "0.4.0", path = "../solverforge-core" }
 solverforge-scoring = { version = "0.4.0", path = "../solverforge-scoring" }
