--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [main, release/*, feature/*]
+    branches: [main, dev, release/*, feature/*]
   pull_request:
-    branches: [main, release/*]
+    branches: [main, dev, release/*]
 
 env:
   CARGO_TERM_COLOR: always
