--- a/crates/solverforge-macros/Cargo.toml
+++ b/crates/solverforge-macros/Cargo.toml
@@ -14,4 +14,4 @@ quote.workspace = true
 proc-macro2.workspace = true
 
 [dev-dependencies]
-solverforge = { path = "../solverforge" }
+solverforge = { version = "0.5.0" }
