--- a/crates/solverforge-solver/Cargo.toml
+++ b/crates/solverforge-solver/Cargo.toml
@@ -9,9 +9,9 @@ description = "Solver engine for SolverForge"
 default = []
 
 [dependencies]
-solverforge-core = { version = "0.4.0", path = "../solverforge-core" }
-solverforge-scoring = { version = "0.4.0", path = "../solverforge-scoring" }
-solverforge-config = { version = "0.4.0", path = "../solverforge-config" }
+solverforge-core = { version = "0.5.0" }
+solverforge-scoring = { version = "0.5.0" }
+solverforge-config = { version = "0.5.0" }
 thiserror.workspace = true
 tracing.workspace = true
 rand.workspace = true
