fix: remove circular dependency in solverforge-macros tests
Replace umbrella crate dependency with solverforge-core in dev-dependencies.
Rewrite test imports to use solverforge-core directly and import macros
from solverforge-macros, eliminating the circular dependency.

--- a/crates/solverforge-macros/Cargo.toml
+++ b/crates/solverforge-macros/Cargo.toml
@@ -14,4 +14,4 @@ quote.workspace = true
 proc-macro2.workspace = true
 
 [dev-dependencies]
-solverforge = { version = "0.5.0" }
+solverforge-core = { version = "0.5.0" }
