--- a/crates/solverforge-scoring/Cargo.toml
+++ b/crates/solverforge-scoring/Cargo.toml
@@ -6,5 +6,5 @@ license.workspace = true
 description = "Incremental constraint scoring for SolverForge"
 
 [dependencies]
-solverforge-core = { version = "0.5.0" }
+solverforge-core = { version = "0.5.0", path = "../solverforge-core" }
 thiserror.workspace = true
