--- a/crates/solverforge/Cargo.toml
+++ b/crates/solverforge/Cargo.toml
@@ -13,11 +13,11 @@ console = ["dep:tracing", "dep:tracing-subscriber", "dep:owo-colors", "dep:num-f
 verbose-logging = []
 
 [dependencies]
-solverforge-core = { version = "0.5.0" }
-solverforge-macros = { version = "0.5.0" }
-solverforge-scoring = { version = "0.5.0" }
-solverforge-solver = { version = "0.5.0" }
-solverforge-config = { version = "0.5.0" }
+solverforge-core = { version = "0.5.0", path = "../solverforge-core" }
+solverforge-macros = { version = "0.5.0", path = "../solverforge-macros" }
+solverforge-scoring = { version = "0.5.0", path = "../solverforge-scoring" }
+solverforge-solver = { version = "0.5.0", path = "../solverforge-solver" }
+solverforge-config = { version = "0.5.0", path = "../solverforge-config" }
 
 # Console output (optional)
 tracing = { version = "0.1", optional = true }
