--- a/crates/solverforge-py/Cargo.toml
+++ b/crates/solverforge-py/Cargo.toml
@@ -14,4 +14,5 @@ crate-type = ["cdylib"]
 [dependencies]
 solverforge-dynamic.workspace = true
 solverforge-core.workspace = true
+solverforge-scoring.workspace = true
 pyo3.workspace = true
