--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,16 @@ jobs:
     name: Rust ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - os: macos-latest
+            rustflags: "-C link-arg=-undefined -C link-arg=dynamic_lookup"
+          - os: ubuntu-latest
+            rustflags: ""
+          - os: windows-latest
+            rustflags: ""
 
     steps:
       - uses: actions/checkout@v4
