--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,8 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Run clippy
+        env:
+          RUSTFLAGS: ${{ matrix.rustflags }}
         run: cargo clippy --workspace --all-targets --all-features -- -D warnings
 
       - name: Build workspace
