--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,8 @@ jobs:
         run: cargo build --workspace --all-features
 
       - name: Run tests
+        env:
+          RUSTFLAGS: ${{ matrix.rustflags }}
         run: cargo test --workspace --all-features
 
   integration:
