--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,16 @@ jobs:
           echo "PYO3_PYTHON=${{ steps.setup-python.outputs.python-path }}" >> $GITHUB_ENV
           echo "PYTHON_SYS_EXECUTABLE=${{ steps.setup-python.outputs.python-path }}" >> $GITHUB_ENV
 
+      - name: Debug Python environment
+        shell: bash
+        run: |
+          echo "=== Python location and architecture ==="
+          which python3
+          python3 --version
+          python3 -c 'import platform,sys; print("Architecture:", platform.machine(), "Executable:", sys.executable)'
+          echo "=== Python library info ==="
+          python3 -c 'import sysconfig; print("LIBDIR:", sysconfig.get_config_var("LIBDIR")); print("LDLIBRARY:", sysconfig.get_config_var("LDLIBRARY"))'
+
       - name: Install Rust
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
