--- a/crates/solverforge-dynamic/Cargo.toml
+++ b/crates/solverforge-dynamic/Cargo.toml
@@ -11,10 +11,10 @@ description = "Runtime-defined solution types for SolverForge"
 solverforge-core.workspace = true
 solverforge-scoring.workspace = true
 solverforge-solver.workspace = true
+solverforge-console = { version = "0.6.0", path = "../solverforge-console" }
 
 thiserror.workspace = true
 tracing.workspace = true
-tracing-subscriber.workspace = true
 rand.workspace = true
 rand_chacha.workspace = true
 
