--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "crates/solverforge-scoring",
     "crates/solverforge-solver",
     "crates/solverforge-config",
+    "crates/solverforge-console",
     "crates/solverforge",
     "crates/solverforge-dynamic",
     "crates/solverforge-py",
