refactor(scoring): move constraint tests to tests/ subdirectory
- Extract if_exists and grouped tests from consolidated tests.rs
- Move *_tests.rs files to constraint/tests/*.rs
- Delete duplicate tests.rs (favoring already-extracted tests)
- Fix imports to use crate::constraint:: path

--- a/crates/solverforge-test/Cargo.toml
+++ b/crates/solverforge-test/Cargo.toml
@@ -3,8 +3,7 @@ name = "solverforge-test"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
-description = "Shared test utilities for SolverForge crates"
+description = "Shared test fixtures (data types and pure functions) for SolverForge crates"
 
 [dependencies]
 solverforge-core = { workspace = true }
-solverforge-scoring = { workspace = true }
