feat(solver): return SolveResult with telemetry from Solver::solve()
Solver::solve() now returns SolveResult<S> containing the solution,
SolverStats (step_count, moves_evaluated, score_calculations), and
duration. The dynamic solve entry point wires stats through to its
own SolveResult and logs them in solve_end events. Also loads
solver.toml config for step limits and time limits.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ solverforge-scoring = { path = "crates/solverforge-scoring" }
 solverforge-solver = { path = "crates/solverforge-solver" }
 solverforge-config = { path = "crates/solverforge-config" }
 solverforge = { path = "crates/solverforge" }
+solverforge-console = { path = "crates/solverforge-console" }
 solverforge-dynamic = { path = "crates/solverforge-dynamic" }
 solverforge-test = { path = "crates/solverforge-test" }
 
