feat(py): init console at module import for early banner display
Call solverforge_console::init() in the PyO3 module init so the banner
prints when Python imports solverforge, not on first solve. Add
solverforge-console as a direct dependency of solverforge-py.

--- a/crates/solverforge-py/Cargo.toml
+++ b/crates/solverforge-py/Cargo.toml
@@ -15,4 +15,5 @@ crate-type = ["cdylib"]
 solverforge-dynamic.workspace = true
 solverforge-core.workspace = true
 solverforge-scoring.workspace = true
+solverforge-console.workspace = true
 pyo3.workspace = true
