--- a/crates/solverforge-core/Cargo.toml
+++ b/crates/solverforge-core/Cargo.toml
@@ -7,11 +7,10 @@ description = "Core types and traits for SolverForge constraint solver"
 
 [features]
 default = []
-decimal = ["rust_decimal"]
+decimal = []
 
 [dependencies]
 thiserror.workspace = true
-rust_decimal = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 
 [dev-dependencies]
