fix serde feature flag and add consistent serde derives
Define serde = ["dep:serde"] feature so cfg_attr annotations are
activatable. Add serde derives to SimpleScore and HardMediumSoftScore
for consistency with HardSoftScore and HardSoftDecimalScore.
BendableScore omitted (const-generic arrays need manual serde impl).
Clean up unused macro re-exports.

--- a/crates/solverforge-core/Cargo.toml
+++ b/crates/solverforge-core/Cargo.toml
@@ -8,6 +8,7 @@ description = "Core types and traits for SolverForge constraint solver"
 [features]
 default = []
 decimal = []
+serde = ["dep:serde"]
 
 [dependencies]
 thiserror.workspace = true
