feat(jit): add Cranelift JIT compiler for Expr trees
Compiles constraint expressions to native function pointers via Cranelift.
Operates on flat *const i64 entity buffers — no DynamicValue, no AST walking.

Supported: Field access, Eq/Ne/Lt/Le/Gt/Ge, And/Or/Not, Add/Sub/Mul/Neg/Abs,
Min/Max, IsNone/IsNotNone (sentinel), Overlaps/OverlapMinutes, If/then/else.

Unsupported variants (RefField, Contains, SetContains, DateOf) return
JitError::Unsupported for interpreter fallback.

11 tests covering key extraction, bi-filters, weight arithmetic, overlaps,
and NQueens diagonal key computation.

--- a/crates/solverforge-dynamic/Cargo.toml
+++ b/crates/solverforge-dynamic/Cargo.toml
@@ -18,5 +18,10 @@ thiserror.workspace = true
 tracing.workspace = true
 rand.workspace = true
 rand_chacha.workspace = true
+cranelift-codegen.workspace = true
+cranelift-frontend.workspace = true
+cranelift-module.workspace = true
+cranelift-jit.workspace = true
+cranelift-native.workspace = true
 
 [dev-dependencies]
