--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,11 @@ rand = "0.9"  # Updated from 0.8
 rand_chacha = "0.9"  # Updated from 0.3
 rayon = "1.11"  # New - for parallel move evaluation
 smallvec = "1.15"  # Updated from 1.11
+cranelift-codegen = "0.116"
+cranelift-frontend = "0.116"
+cranelift-module = "0.116"
+cranelift-jit = "0.116"
+cranelift-native = "0.116"
 
 # Proc-macro dependencies
 syn = { version = "2.0", features = ["full", "extra-traits"] }
